<resources>
    <string name="application">Encargado oficial de la cuarentena</string>
    <string name="application_intro">Encargado oficial de \nla cuarentena</string>
    <string name="exit_message">Presione Atrás nuevamente para salir de la aplicación.</string>
    <string name="diagnosis_results">Resultado de autodiagnóstico\n(Mañana / Tarde)</string>
    <string name="area_escape">Área\nde cuarentena</string>
    <string name="refresh">Actualizar</string>
    <string name="main_title">Lista de gestión</string>
    <string name="my_info">Mi Info.</string>
    <string name="search">Buscar</string>
    <string name="designated_insulator">Designados</string>
    <string name="dedicated_official_change">Cambiar encargado oficial</string>
    <string name="passward">Contraseña</string>
    <string name="officer_search">Consulta del personal público</string>
    <string name="group">Insitución</string>
    <string name="name_rank">Nombre</string>
    <string name="officer_info">Información del oficial encargado</string>
    <string name="officer_change">Cambiar</string>
    <string name="cell_phone_call_title">Llamar</string>
    <string name="gender">Género</string>
    <string name="national">Nacionalidad</string>
    <string name="status">Estado de la cuarentena</string>
    <string name="addr">Dirección</string>
    <string name="self_diagnosis_result">Ver resultados de diagnóstico</string>
    <string name="view_location">Ver ubicación de la cuarentena</string>
    <string name="status_change">Cambiar estado de la cuarentena</string>
    <string name="plz_wait">Por favor espere...</string>
    <string name="permission_contents">Acepte el uso de permisos. \nSalir de la App.</string>
    <string name="admin_permission">Autoridad de administrador</string>
    <string name="self_diagnosis">Autodiagnóstico</string>
    <string name="admin_permission_contents">El ID que utiliza no cuenta autorización. \nPóngase en contacto con el administrador.</string>
    <string name="self_contained_location">Ubicación de cuarentena</string>
    <string name="change">Cambiar</string>
    <string name="status_change_message">Por favor seleccione un estado.</string>
    <string name="admin_title">Iniciar sesión</string>
    <string name="login">Iniciar sesión</string>
    <string name="login_id">ID</string>
    <string name="login_id_ex">Tu ID</string>
    <string name="login_pass">Ingrese menos de 20 dígitos.</string>
    <string name="login_phone_number">No. de Celular</string>
    <string name="login_phone_ex">Ej: 994123456</string>
    <string name="fail_data_message">Error al obtener datos. Vuelva a intentar más tarde.</string>
    <string name="PIN_AGREE">Confirmar</string>
    <string name="PIN_NUMBER_CREATE">Guardar</string>
    <string name="login_error_message">La información de inicio de sesión es incorrecta. Vuelva a intentar. </string>
    <string name="network_error_message">Se produjo un error durante el servicio. Vuelva a intentar más tarde.</string>
    <string name="not_data_message">La red de comunicación no es fluida. Vuelva a intentar más tarde.</string>
    <string name="user_certification">Autenticación de usuario</string>
    <string name="close_agree">Cerrar</string>
    <string name="submit">Enviar</string>
    <string name="temperature">Fiebre (más de 37.5 ℃) o sensación de calor</string>
    <string name="cough">Tos</string>
    <string name="sore_throat">Dolor de garganta</string>
    <string name="dyspnea">Disnea (dificultad para respirar)</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="selftcheck_list_title">Resultados de autodiagnóstico</string>
    <string name="today_symptom">Fecha de diagnóstico</string>
    <string name="not_sym">Sin síntomas</string>
    <string name="name">Nombre</string>
    <string name="emergency_phone">Contacto (tutor)</string>
    <string name="save_location">Registrar</string>
    <string name="add_location">Guardar ubicación</string>
    <string name="addr_change">Modificación de ubicación</string>
    <string name="addr_input">dirección</string>
    <string name="addr_input_etc">Dirección</string>
    <string name="addr_input_etc_hint">Por favor, introduzca su dirección.</string>
    <string name="location_regist">Editar</string>
    <string name="location_search">¿Desea guardar la ubicación seleccionada?</string>
    <string name="ok">Sí</string>
    <string name="cancel">Cancelar</string>
    <string name="permission_title">Permiso</string>
    <string name="permission_message">Presione Permitir para el cambio de permiso en el sistema de la App. </string>
    <string name="permission_success">Permitir</string>
    <string name="exit">Finalizar</string>
    <string name="app_permission_close">Acepte el uso de permisos. \nSalir de la App.</string>
    <string name="diag_etc">Observaciones</string>
    <string name="bodyheat">Temperatura : </string>
    <string name="logout">Salir</string>
    <string name="see_more">Ver más</string>
    <string name="not_data_self_diagnosis_list">No hay lista de autodiagnóstico.</string>
    <string name="please_allow_permission_app_info">Autorice los siguientes permisos en la información de la aplicación.</string>
    <string name="please_input_name">Ingrese su nombre completo. </string>
    <string name="please_input_id">Ingrese su No. de identificación.</string>
    <string name="save_location_success">Guarde su ubicación</string>
    <string name="now_self_quarantine_location">Ubicación actual de la cuarentena</string>
    <string name="logout_success">Finalizó la sesión correctamente.</string>
    <string name="please_input_manager_id">Por favor, introduzca la identificación oficial.</string>
    <string name="push_alert_service">Servicio de alarma Push</string>
    <string name="user_detail_title">Buscar detalles de usuario</string>

    <string name="region">Región</string>
    <string name="provincia">Provincia</string>
    <string name="distrito">Distrito</string>
    <string name="region_not_message">Por favor seleccione Región</string>
    <string name="provincia_not_message">Por favor seleccione Provincia</string>
    <string name="distrito_not_message">Por favor seleccione Distrito</string>
    <string name="region_select">Región</string>
    <string name="provincia_select">Provincia</string>
    <string name="distrito_select">Distrito</string>

    <string name="birth">Fecha de Nacimiento</string>
    <string name="google_map_title">Google Map</string>

    <!--2020-05-15-->
    <string name="location_copy">Copy location</string>
    <string name="location_copy_correct">La información de ubicación ha sido copiada.</string>
    <string name="location_copy_not">No hay información de ubicación.</string>

</resources>
